--- a/trunk/lampForSale/WebRoot/web/main.html
+++ b/trunk/lampForSale/WebRoot/web/main.html
@@ -35,7 +35,7 @@
 								<div class="content">
 										<div class="1">
 											<div class="prod_img">
-													<a href="details.html"><img src="../images/1.jpg"/></a>
+													<a href="details.html"><img src="../images/picture1.jpg"/></a>
 											</div>
 											<div class="prod_det_box">
 													<div class="box_top"></div>
@@ -53,7 +53,7 @@
 										
 										<div class="1">
 											<div class="prod_img">
-													<a href="details.html"><img src="../images/3.jpg"/></a>
+													<a href="details.html"><img src="../images/picture2.jpg"/></a>
 											</div>
 											<div class="prod_det_box">
 													<div class="box_top"></div>
@@ -86,7 +86,7 @@
 								  
               				</div>
 							<div class="right_title">
-								<div class="title"><span class="title_icon"><img src="../images/bullet3.gif" /></span>Produce  Advertisement</div>
+								<div class="title"><span class="title_icon"><img src="../images/bullet2.gif" /></span>Produce  Advertisement</div>
 							</div>	
 
 							<div class="right_flash">					
