--- a/lampForSale/WebRoot/web/main.html
+++ b/lampForSale/WebRoot/web/main.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <title>无标题文档</title>
 </head>
-<link href="../css/style.css" rel="stylesheet" type="text/css"/>
+<link href="../css/main.css" rel="stylesheet" type="text/css"/>
 <body>
 
 <div id="wrap">
